Add default namespace

--- a/composite/configurations/eks/eck/elastic/templates/logstash.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/logstash.yaml
@@ -3,6 +3,7 @@ apiVersion: logstash.k8s.elastic.co/v1alpha1
 kind: Logstash
 metadata:
   name: quickstart
+  namespace: default
 spec:
   count: 1
   elasticsearchRefs:
