--- a/composite/configurations/eks/eck/elastic/templates/logstash.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/logstash.yaml
@@ -8,7 +8,7 @@ spec:
   count: 1
   elasticsearchRefs:
     - name: quickstart
-      clusterName: qs
+      clusterName: quickstart
   version: 8.8.0
   pipelines:
     - pipeline.id: main
