--- a/composite/configurations/eks/eck/elastic/templates/elasticsearch.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/elasticsearch.yaml
@@ -2,7 +2,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  name: quickstart
+  name: elasticsearch-quickstart
   namespace: default
 spec:
   version: 8.8.0
