--- a/composite/configurations/eks/eck/elastic/templates/kibana.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/kibana.yaml
@@ -2,10 +2,10 @@
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
-  name: quickstart
+  name: kibana-quickstart
   namespace: default
 spec:
   version: 8.8.0
   count: 1
   elasticsearchRef:
-    name: quickstart
+    name: elasticsearch-quickstart
