--- a/composite/configurations/eks/eck/elastic/templates/elasticsearch.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/elasticsearch.yaml
@@ -11,3 +11,13 @@ spec:
     count: 3
     config:
       node.store.allow_mmap: false
+    podTemplate:
+      spec:
+        containers:
+        - name: elasticsearch
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 8
+            limits:
+              memory: 4Gi
