--- a/composite/configurations/eks/eck/elastic/templates/kibana.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/kibana.yaml
@@ -44,3 +44,17 @@ spec:
             id: system-1
             package:
               name: system
+  podTemplate:
+    spec:
+      containers:
+      - name: kibana
+        env:
+          - name: NODE_OPTIONS
+            value: "--max-old-space-size=2048"
+        resources:
+          requests:
+            memory: 1Gi
+            cpu: 0.5
+          limits:
+            memory: 1Gi
+            cpu: 2
