--- a/composite/configurations/eks/eck/elastic/templates/fleetserver.yaml
+++ b/composite/configurations/eks/eck/elastic/templates/fleetserver.yaml
@@ -21,6 +21,15 @@ spec:
         automountServiceAccountToken: true
         securityContext:
           runAsUser: 0
+        containers:
+        - name: agent
+          resources:
+            requests:
+              memory: 200Mi
+              cpu: 0.5
+            limits:
+              memory: 200Mi
+              cpu: 0.5
 ---
 apiVersion: agent.k8s.elastic.co/v1alpha1
 kind: Agent
@@ -42,6 +51,15 @@ spec:
         automountServiceAccountToken: true
         securityContext:
           runAsUser: 0
+        containers:
+          - name: agent
+            resources:
+              requests:
+                memory: 200Mi
+                cpu: 0.5
+              limits:
+                memory: 200Mi
+                cpu: 0.5
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
